# symphony

./: .gitignore  .herdr-frontier-gate  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  WORKFLOW.md  __init__.py  agent_runner.py  alembic.ini  automation.py  bindings.yml  blocked_reconciler.py  claude_host.py  claude_runner.py  code_version.py  config.py  context_compaction.py  contract_gate.py  contract_gate_baseline.json  contract_gate_corpus.json  main.py  model_catalog.py  models.yml  notifier.py  patrol_incident.py  plane_adapter.py  plane_cli.py  plane_poller.py  proc_runtime.py  project_scaffold.py  prompt_renderer.py  pyproject.toml  redispatch_core.py  remote_worktree.py  repo_host.py  run_worktree.py  schedule.py  scheduler.py  session_continuity.py  (+8 more)
.claude/: settings.json
.kanban/: progress.md
.scratch/: herdr-frontier-canary-state.path  herdr-frontier-state.path  herdr-frontier-wave2-state.path
PRDs/: patrol-incident-dedup-and-bounded-history.md
docs/: SMOKE.md  review-phase-auto-land-smoke-2.txt  review-phase-auto-land-smoke.txt
handoffs/: 2026-07-15-issue-389-e2e-troubleshooting.md  2026-07-15-issue-389-file-buttons.md
plans/: .311-issue-attachments.state.yml  .feature-remote-binding-file-browser.state.yml  .patrol-incident-dedup-and-bounded-history.state.yml  .remote-podium-issue-creation.state.yml  .symphony-pi-executor-swap.state.yml  .symphony-plan-approve-workflow.state.yml  .symphony-ticket-scheduling.state.yml  311-issue-attachments.md  feature-remote-binding-file-browser.md  patrol-incident-dedup-and-bounded-history.md  (+3 more)
scheduler/: loop.py  (+14 more)
(+744 files in other folders)
