[project]
name = "symphony"
version = "0.1.0"
description = "Plane-backed Symphony agent runner skeleton"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17",
  "fastapi>=0.124",
  "httpx>=0.27",
  "pyyaml>=6.0.3",
  "uvicorn>=0.38",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "web/api/tests", "web/cli/tests"]
pythonpath = [".", "web/api"]
